# AutoSaveScratch

./: .coverage  .gitignore  AutoSaveNewFiles.sublime-settings  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docs  install.py  install.sh  justfile  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
autosave_sublime/: __init__.py  auto_save_new_files.py
scripts/: autosave_sublime_setup.py
tests/: test_config.py  test_file_ops.py
tests/mocks/: sublime.py  sublime_plugin.py
